@@ -26,6 +26,7 @@ ChangeLog
 [-] * Disable gcc warnings about non literal format strings (bug #901).
 [-] * Add more fuzzy logic to detect bad encoding from phone (bug #874).
 [-] * Add ID for Nokia 7500 and Nokia 7210s.
+[-] * Improve searching for Bluetooth stack on OS X.
     
 20090512 - 1.24.90
 
